2005-06-22  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.2.

2005-06-22  Ross Burton  <ross@burtonini.com>

	The Great Gnome-Vfs Port.

	* data/sound-juicer.glade:
	Manually add the file system backend property to the file selector.

	* data/sound-juicer.schemas.in:
	Add base_uri and deprecate base_path.
	
	* src/sj-extractor.[ch]:
	Use gnomevfssink instead of filesink.

	* src/sj-extracting.c:
	* src/sj-main.c:
	* src/sj-prefs.c:
	* src/sound-juicer.h:
	base_path is dead, long live base_uri.

	* src/sj-util.[ch]:
	Replace mkdir_recursive with make_directory_with_parents_for_uri
	from gnome-vfs.

2005-06-22  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Add hidden for now Edit Profiles button.

	* src/sj-prefs.c:
	Connect to button, display editor. Crashes, which is why the
	button is hidden.

2005-05-17  Jayaradha  <njayaradha@yahoo.com>

	* ta.po: Added tamil

2005-06-12  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2005-06-12  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Write MusicBrainz identifiers as IDs not URLs.

2005-06-09  Ross Burton  <ross@burtonini.com>

	* src/sj-structures.c:
	The date element is optional, so check it is set before freeing.

2005-06-08  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Check for the glade file before opening it (Bastien Nocera).

2005-06-08  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.1.

2005-06-05  Ross Burton  <ross@burtonini.com>

	* src/Makefile.am:
	* src/bacon-message-connection.[ch]:
	* src/update-from-bacon.sh:
	* src/sj-main.c:
	Pull in BaconMessageConnection and use it to re-use existing
	instances (Bastien Nocera)

2005-06-05  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Check for a Glade file in the build tree first (patch from Bastien
	Nocera).

2005-06-02  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c: