@@ -1,5 +1,10 @@
 2005-06-22  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Fix the overwrite check.
+
+2005-06-22  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	* NEWS:
 	Version 2.11.2.
